# solarpanel-detection-system

./: .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  AWS_DEPLOYMENT.md  Dockerfile  Makefile  README.md  _quarto.yml  airflow.cfg  cleanup.ps1  config.env  copy_data_to_airflow.sh  data.dvc  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml  file_mlflow_test.py  fix_lint_errors.py  index.qmd  init-db.sh  init-mlflow-db.sh  pyproject.toml  requirements.txt  simple_mlflow_test.py  tatus  test_mlflow.py  test_simple_dag.py
.dvc/: config
_site/: index.docx  index.html  search.json
airflow/: Dockerfile  requirements.txt  start-airflow.sh
airflow/config/: airflow.cfg
airflow/dags/: README.md  testdag.py  (+8 more)
build_context/: Dockerfile  docker-compose.yml
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.base  Dockerfile.minio-init  Dockerfile.mlflow  Dockerfile.model  Dockerfile.solarpanel
fastapi_gateway/: Dockerfile
init-scripts/: copy_data_to_airflow.sh  init-airflow-user.sh  minio-init.sh
minio-init/: Dockerfile  minio-init.sh
mlflow/: Dockerfile
postgres-init/: 01-mlflow-db.sql  init-airflow-db.sql  init-mlflow-db.sql
scripts/: test_ci.py
solar_panel_detection/: dataset.py  features.py  plots.py
solarpanel_detection_service/: requirements.txt
solarpanel_detection_system/: Dockerfile
src/: Readme.md  __init__.py  db_init.py  docker-compose.yml  mnist_training.ipynb  plots.py  process_minio_yolo.py  requirements.txt
tests/: test_scrape_location.py
traintest/: data.yaml  train_yolo.py
(+140 files in other folders)
