[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solarpanel_detection_service"
version = "0.0.1"
description = "Detect solar panels using computer vision"
authors = [
  { name = "Delvin Bacho and Navid Gharapanjeh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''


[tool.ruff.lint.isort]
known_first_party = ["solar_panel_detection_service"]
force_sort_within_sections = true
